# Unitem

./: .gitignore  AGENTS.md  ARCHITECTURE.md  README.md  pyproject.toml  unitem.yaml
.cursor/: BUGBOT.md  MODEL-ROUTING.md  cloud-agent-prompts.md  environment.json  hooks.json
.playwright-mcp/: page-2026-07-04T17-19-47-024Z.yml  page-2026-07-04T17-20-38-089Z.yml  page-2026-07-04T17-27-37-970Z.yml  page-2026-07-04T17-28-43-751Z.yml  page-2026-07-04T17-34-10-708Z.yml  page-2026-07-04T17-34-54-651Z.yml
UI/: ARCHITECTURE-ALIGNMENT.md  README.md  capacitor.config.ts  index.html  package-lock.json  package.json  vite.config.ts
conventions/: conventions.yaml
dashboard/: package.json
design-tokens/: config.mjs  tokens.json
docs/: 01-track-brief.md  02-project-overview.md  03-architecture.md  04-scope-plan-risks.md  05-team-setup.md  07-venture-brief.md  (+11 more)
engine/: README.md  main.py  pyproject.toml  requirements.txt  screen-map.json
engine/engine/: __init__.py  __main__.py  classify.py  detect.py
engine/tests/: conftest.py  test_aggregate.py  test_analyze.py  test_checks.py  test_diffing.py  test_e2e_mock.py  test_extractors.py  test_generate.py  test_mapping.py  test_retrieval.py  test_schema.py  test_transfer_mock.py
engine/unitem/: __init__.py  aggregate.py  analyze.py  api.py  cli.py  config.py  diffing.py  discovery.py  extractors.py  generate.py  judge.py  mapping.py  report.py  schema.py  transfer.py
engine/unitem/prompts/: classifier.md  transfer_reader.md  transfer_writer.md
engine/unitem/runner/: __init__.py  base.py  claude.py  cursor.py  mock.py
(+163 files in other folders)
