[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "unitem"
version = "0.1.0"
description = "Cross-platform iOS/Android design-consistency engine (propagate / hold / flag)"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2",
    "fastapi",
    "uvicorn",
    "pyyaml",
]

[project.scripts]
unitem = "unitem.cli:main"

[tool.setuptools.packages.find]
include = ["unitem*"]

[tool.setuptools.package-data]
unitem = ["prompts/*.md"]
